tests/parse_print/autogen/730~1439082038_16/stderr.expected
Error:
    tests/parse_print/autogen/730~1439082038_16/spec.essence:115:37:
    |
115 |                | l_2 : set (minSize var1) of
    |                                     ^^^^
Cannot use variable of category : decision in the context of Domain
